# azure-storage-gst-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml  azureuploader.cpp  azureuploader.hpp  base64.cpp  base64.hpp  blockazureuploader.cpp  blockazureuploader.hpp  gstazuresink.c  gstazuresink.h  gstazuresinkconfig.h  gstazureuploader.c  gstazureuploader.cpp  gstazureuploader.h  gsterror.h  gstutils.h  main.cpp  simpleazureuploader.cpp  simpleazureuploader.h  simpleazureuploader.hpp  testUploader.cpp  utils.cpp  utils.h  utils.hpp
include/: azurecommon.hpp  azuredownloader.h  azuredownloader.hpp  azureuploadercommon.hpp  blockazureuploader.h  blockazureuploader.hpp  gstazuredownloader.h  gstazuresink.h  gstazuresinkconfig.h  gstazuresrc.h  gstazuresrcconfig.h  gstazureuploader.h  simpleazureuploader.h  simpleazureuploader.hpp  testUtils.hpp
include/utils/: base64.hpp  blockingqueue.hpp  common.hpp  gstutils.h
src/: CMakeLists.txt  azuredownloader.cpp  blockazureuploader.cpp  blockazureuploader.hpp  gstazureelements.c  gstazuresink.c  gstazuresinkconfig.c  gstazuresinkconfig.h  gstazuresrc.c  simpleazureuploader.cpp  simpleazureuploader.hpp
src/util/: base64.cpp  base64.hpp  blockingqueue.hpp  utils.hpp
src/utils/: CMakeLists.txt  base64.cpp
tests/: CMakeLists.txt  azuresink.c  azuresrc.c  testBlockDownloader.cpp  testBlockUploader.cpp  testSimpleUploader.cpp  testUploader.cpp  testUtils.hpp
